--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "计算矩形的周长和面积",
   "main": "rectangle.js",
   "dependencies": {
-    "grunt": "^1.0.3",
     "grunt-contrib-csslint": "^2.0.0",
     "grunt-eslint": "^21.0.0",
-    "grunt-htmlhint": "^0.9.13",
-    "grunt-mocha-cli": "^4.0.0"
+    "grunt-htmlhint": "^0.9.13"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt": "^1.0.3",
+    "grunt-mocha-cli": "^4.0.0",
+    "grunt-mocha-istanbul": "^5.0.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0"
   },
